--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "hardhat": "^2.20.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.4"
   }
 }
